lncpu tests